templates-original/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-worldapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mywebapp
                port:
                  number: 8080
